# diary

./: .gitignore  README-developer.rst  README.md  a.sql  b.sql  build_it.sh  pyproject.toml  setup.py
diary/: diaryclass.py  main.py
diarydek/: diarydekclass.py  main.py
src/diarydek/: diarydek.py  main.py
tests/: diary_test.py  diarydek_test.py
